--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
     "main": "main.js",
     "scripts": {
         "start": "NODE_ENV=production electron . --remote-allow-origins=*",
-        "start:dev": "NODE_ENV=development electron . --watch --remote-allow-origins=* "
-
+        "start:dev": "NODE_ENV=development electron . --watch --remote-allow-origins=* ",
+        "gitup": "git add . && git commit -m 'update' && git push"
     },
     "dependencies": {
         "electron": "^31.0.2",
         "electron-devtools-installer": "^3.2.0",
         "electron-prompt": "^1.7.0",
+        "network": "^0.7.0",
+        "network-config": "^3.0.0",
         "node-wifi": "^2.0.16",
         "shelljs": "^0.8.5",
         "wireless-tools": "^0.19.0"
     },
     "devDependencies": {
-        "@vue/devtools": "^6.0.0-beta.21"
+        "@vue/devtools": "^6.0.0-beta.21",
+        "electron-reload": "^2.0.0-alpha.1",
+        "electron-reloader": "^1.2.3"
     }
 }
